--- a/index.html
+++ b/index.html
@@ -1,141 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EUWEB Green Draft</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f4f7f4;
-            color: #1e2d1e;
-        }
-
-        /* Fixed Menu */
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: #ffffff;
-            border-bottom: 1px solid #d9e3d9;
-            z-index: 1000;
-        }
-
-        nav {
-            max-width: 1100px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            padding: 14px 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #2b4d2b;
-            font-weight: 600;
-            margin-left: 20px;
-        }
-
-        /* Presentation Space */
-        .presentation {
-            margin-top: 90px;
-            padding: 80px 20px;
-            background: #ffffff;
-        }
-
-        .presentation-inner {
-            max-width: 1100px;
-            margin: 0 auto;
-        }
-
-        h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            max-width: 800px;
-        }
-
-        section {
-            padding: 60px 20px;
-        }
-
-        .section-inner {
-            max-width: 1100px;
-            margin: 0 auto;
-        }
-
-        footer {
-            background: #e9f0e9;
-            padding: 30px 20px;
-            text-align: center;
-            font-size: 14px;
-            color: #4a5f4a;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>EUWEB Presentation Space</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f5f7f6;
+      color: #1f2a2e;
+      line-height: 1.6;
+    }
+    header {
+      background: #0f2a2f;
+      color: #ffffff;
+      padding: 16px 24px;
+    }
+    nav a {
+      color: #ffffff;
+      margin-right: 18px;
+      text-decoration: none;
+      font-size: 14px;
+      letter-spacing: 0.5px;
+    }
+    section {
+      padding: 48px 24px;
+      max-width: 960px;
+      margin: auto;
+    }
+    h1, h2 {
+      font-weight: 500;
+    }
+    .context {
+      background: #ffffff;
+      border-left: 4px solid #2a7f62;
+      padding: 24px;
+      margin-top: 24px;
+    }
+    footer {
+      background: #e9eeec;
+      padding: 24px;
+      font-size: 13px;
+      text-align: center;
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
-    <nav>
-        <div><strong>EUWEB</strong></div>
-        <div>
-            <a href="#mission">Mission</a>
-            <a href="#framework">Framework</a>
-            <a href="#contact">Contact</a>
-        </div>
-    </nav>
+  <nav>
+    <a href="#presentation">Presentation</a>
+    <a href="#framework">Framework</a>
+    <a href="#development">Development</a>
+  </nav>
 </header>
 
-<div class="presentation">
-    <div class="presentation-inner">
-        <h1>Green Digital Framework for Europe</h1>
-        <p>
-            This landing page represents a structured, repeatable framework
-            designed to support GREEN initiatives through digital clarity,
-            transparency, and system-based development.
-        </p>
-    </div>
-</div>
+<section id="presentation">
+  <h1>EUWEB Presentation Space</h1>
+  <p>
+    This page represents a structured digital presentation space designed for
+    institutional, EU-oriented, and JWT-aligned communication systems.
+  </p>
 
-<section id="mission">
-    <div class="section-inner">
-        <h2>Mission</h2>
-        <p>
-            Enable sustainable projects by providing a clear,
-            verifiable digital structure that can be reused, measured, and scaled
-            across multiple European initiatives.
-        </p>
-    </div>
+  <div class="context">
+    <p>
+      The objective is not visual emphasis, but clarity of structure,
+      readability, and logical progression of information.
+    </p>
+  </div>
 </section>
 
 <section id="framework">
-    <div class="section-inner">
-        <h2>Framework</h2>
-        <p>
-            Each project follows a fixed layout logic: navigation, a central
-            presentation space, and modular content blocks for consistency
-            and efficient future development.
-        </p>
-    </div>
+  <h2>Conceptual Framework</h2>
+  <p>
+    The framework follows a modular logic: introduction, contextual validation,
+    and scalable development phases. Content is intentionally neutral and
+    adaptable to multiple EU project scopes.
+  </p>
 </section>
 
-<section id="contact">
-    <div class="section-inner">
-        <h2>Contact</h2>
-        <p>
-            This page is a draft validation asset. Further development continues
-            only after structure approval and system alignment.
-        </p>
-    </div>
+<section id="development">
+  <h2>Development Path</h2>
+  <p>
+    This space is intended as a base layer. Once alignment is confirmed,
+    additional modules, tools, and hosting integration can be progressively
+    activated.
+  </p>
 </section>
 
 <footer>
-    © EUWEB Green Initiative – Draft Landing Page
+  EUWEB · JWT-style Presentation · Proof of Understanding
 </footer>
 
 </body>
